# ledgeros_v2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_EPIC_01_IMPLEMENTATION.md  README_EPIC_02_IMPLEMENTATION.md  README_EPIC_03_IMPLEMENTATION.md  README_EPIC_04_IMPLEMENTATION.md  README_EPIC_05_IMPLEMENTATION.md  api_clients.yml  docker-compose.yml  pyproject.toml
apps/accounting/: admin.py  apps.py  signals.py  transition_rules.py
apps/accounting/api/: authentication.py  ingestion_serializers.py  serializers.py  urls.py  views.py
apps/accounting/migrations/: 0001_initial.py  0002_journalentry_soft_closed_permission.py  0003_closed_period_status.py  0004_bill_customer_invoice_invoiceline_payment_and_more.py  (+6 more)
archived_docs/: README_EPIC_01_IMPLEMENTATION.md  README_EPIC_04_IMPLEMENTATION.md  epic-04-reporting-tax-periods.md  epic-05-api-contract.md  epic-05-api-integration.md  epic-06-ui-permissions-deploy.md
config/: asgi.py  sample_chart_of_accounts.yml  urls.py
config/settings/: base.py  production.py  test.py
docs/: accounting-core-invariants.md  ai-agent-guidance.md  api-auth-idempotency.md  api-client-config-schema.md  epic-01-accounting-core.md  epic-02-ar-ap.md  epic-03-banking-reconciliation.md  epic-04-reporting-tax-periods.md  epic-05-api-contract.md  epic-05-api-integration.md  epic-05-open-decisions.md  epic-06-ui-permissions-deploy.md  epic-09.md  epic-implementation-guardrails.md  feature-roadmap.md  ledgeros_accounting_module_prd.md  reporting-invariants.md  technical-spec.md  user-manual.md
scripts/: check.sh
(+39 files in other folders)
